--- a/ForumASPMVC/Views/Topics/Create.cshtml
+++ b/ForumASPMVC/Views/Topics/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ForumASPMVC.Models.Topic
+﻿@model ForumASPMVC.Models.ViewModels.CreateTopicViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -22,11 +22,7 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
+           
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
