Created ViewModel for listing topic

--- a/ForumASPMVC/Views/Topics/Index.cshtml
+++ b/ForumASPMVC/Views/Topics/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ForumASPMVC.Models.Topic>
+﻿@model IEnumerable<ForumASPMVC.Models.ViewModels.ListTopicViewModel>
 
 @{
     ViewData["Title"] = "Index";
