adding bootstrap theme plus topiccontroller

--- a/ForumASPMVC/Views/Home/Index.cshtml
+++ b/ForumASPMVC/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4" style="color:darkgoldenrod">Welcome To Our Forum</h1>
+    <br />
+    <br />
+    <p style="color:aliceblue">We're thrilled to have you join our community of Forum LION. Whether you're a seasoned expert or just getting started, this forum is a place where you can connect with like-minded individuals, ask questions, share your knowledge, and engage in meaningful discussions.</p>
 </div>
