--- a/ForumASPMVC/Views/Topics/Index.cshtml
+++ b/ForumASPMVC/Views/Topics/Index.cshtml
@@ -1,23 +1,32 @@
-﻿@model IEnumerable<ForumASPMVC.Models.ViewModels.ListTopicViewModel>
+﻿@model IEnumerable<ForumASPMVC.Models.ViewModels.ListTopicViewModel     >
 
 @{
     ViewData["Title"] = "Index";
 }
-
+@*<partial name="_Notification"/>*@
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
+    @*<a asp-action="Create">Create New</a>*@
+
+    <div class="col-6 text-end">
+            <a asp-controller="Topics" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-plus-square-dotted"></i> &nbsp; Create New Topic
+            </a>
+
+        </div>
+
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
+            <hr />
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
+         
             <th>
                 @Html.DisplayNameFor(model => model.Created)
             </th>
@@ -30,16 +39,18 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
+          
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
+            
             <td>
                 @Html.DisplayFor(modelItem => item.Created)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary mx-2">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">Delete</a>
             </td>
         </tr>
 }
