--- a/ForumASPMVC/Views/Shared/_Layout.cshtml
+++ b/ForumASPMVC/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Topics</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                           <a class="nav-link text-dark" asp-area="" asp-controller="ThreadOnes" asp-action="Index">ThreadOnes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
