Added create thread button in topic details page

--- a/ForumASPMVC/Views/Topics/Details.cshtml
+++ b/ForumASPMVC/Views/Topics/Details.cshtml
@@ -36,6 +36,14 @@
 </div>
 
 
+<div class="col-6 text-end">
+    <a asp-controller="ThreadOnes" asp-action="Create" class="btn btn-primary">
+        <i class="bi bi-plus-square-dotted"></i> &nbsp; Create New Thread
+    </a>
+
+</div>
+
+
 @if (Model.Threads != null)
 {
     <table class="table">
