--- a/ForumASPMVC/Views/ThreadOnes/Create.cshtml
+++ b/ForumASPMVC/Views/ThreadOnes/Create.cshtml
@@ -34,6 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Topics"  asp-action="Index">Back to List</a>
 </div>
+
 
