--- a/ForumASPMVC/Views/Shared/_Layout.cshtml
+++ b/ForumASPMVC/Views/Shared/_Layout.cshtml
@@ -25,11 +25,20 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Topics</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Skola</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Film</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Sport</a>
                         </li>
                         @*<li class="nav-item">
                            <a class="nav-link text-dark" asp-area="" asp-controller="ThreadOnes" asp-action="Index">ThreadOnes</a>
                         </li>*@
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -41,7 +50,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Separated link</a>
                             </div>
-                        </li>
+                        </li>*@
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-sm-2" type="search" placeholder="Search">
