Added text area and showed comments in topic details page by using partial view

--- a/ForumASPMVC/Views/Topics/Details.cshtml
+++ b/ForumASPMVC/Views/Topics/Details.cshtml
@@ -70,7 +70,7 @@
                     </td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a class="Details" href="javascript:;">Show comments</a> |
                         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
                         <a asp-action="Create" asp-controller="Replies" asp-route-id="@item.Id">Reply</a> |
                         <a asp-action="Create" asp-controller="Comments" asp-route-id="@item.Id">Comment</a>
