--- a/ForumASPMVC/Views/Shared/_Layout.cshtml
+++ b/ForumASPMVC/Views/Shared/_Layout.cshtml
@@ -23,17 +23,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Topics</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Details" asp-route-id="1">School</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Skola</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Details" asp-route-id="2">Film</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Film</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Details" asp-route-id="3">Sport</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Sport</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">All topics</a>
                         </li>
                         @*<li class="nav-item">
                            <a class="nav-link text-dark" asp-area="" asp-controller="ThreadOnes" asp-action="Index">ThreadOnes</a>
