--- a/ForumASPMVC/Views/Topics/Index.cshtml
+++ b/ForumASPMVC/Views/Topics/Index.cshtml
@@ -49,8 +49,7 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary mx-2">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
             </td>
         </tr>
 }
